<resources>
    <string name="app_name">RE</string>

    <!---->
    <string name="buttonSearchMenu">RECHERCHE</string>
    <string name="textViewMenu">Menu</string>
    <string name="buttonHistoryMenu">HISTORIQUE</string>
    <string name="buttonQuitteMenu">Quitter</string>


    <!---->
    <string name="textViewInformations">Informations sur l\'\entreprise</string>
    <string name="textViewInformationsCache">Informations sur l\'\entreprise (cache)</string>

    <string name="textViewHistory">Historique de recherche</string>

    <!---->
    <string name="historyDate">date:</string>
    <string name="Siret">N de Siret: %d</string>
    <string name="Siren">N de Siren: %d</string>
    <string name="nameEntre">Nom: %s</string>
    <string name="libelle_de_voie">Libelle de la voie: %s</string>
    <string name="departement_adresse">Departement: %s</string>
    <string name="code_postale">Code postale: %d</string>
    <string name="libelle_activity">Activite: %s</string>
    <string name="date_de_creation_entreprise">Date de creation: %s</string>
    <string name="adresse_entreprise">Adresse: %s</string>

</resources>