<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewListName"
        android:text="@string/nameEntre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textViewListSiret"
        android:text="@string/Siret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textViewListSiren"
        android:text="@string/Siren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textViewListLibelleVoie"
        android:text="@string/libelle_de_voie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textViewListDepartement"
        android:text="@string/departement_adresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textViewListCodePostale"
        android:text="@string/code_postale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textViewListLibelleActivite"
        android:text="@string/libelle_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textViewListDate"
        android:text="@string/date_de_creation_entreprise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textViewListAdresse"
        android:text="@string/adresse_entreprise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>