<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/textViewCacheTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewInformationsCache"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarCacheInformations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCacheTitle" />

    <TextView
        android:id="@+id/textViewCacheSiret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Siret"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarCacheInformations" />

    <TextView
        android:id="@+id/textViewCacheSiren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Siren"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCacheSiret" />


    <TextView
        android:id="@+id/textViewNameCacheEntreprise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/nameEntre"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCacheSiren" />

    <TextView
        android:id="@+id/textViewCachelibelleVoie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/libelle_de_voie"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCacheDateCreation" />

    <TextView
        android:id="@+id/textViewCacheDepartement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/departement_adresse"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCacheAdresse" />

    <TextView
        android:id="@+id/textViewCacheCodePostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/code_postale"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCacheDepartement" />

    <TextView
        android:id="@+id/textViewCacheLibelleActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/libelle_activity"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCachelibelleVoie" />

    <TextView
        android:id="@+id/textViewCacheDateCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/date_de_creation_entreprise"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCacheCodePostal" />

    <TextView
        android:id="@+id/textViewCacheAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/adresse_entreprise"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameCacheEntreprise" />



</androidx.constraintlayout.widget.ConstraintLayout>