<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textViewMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewMenu"
        android:textSize="45dp"
        android:textColor="@color/black"
        android:layout_marginTop="145dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSearchMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSearchMenu"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMenu" />

    <Button
        android:id="@+id/buttonHistoryMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonHistoryMenu"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearchMenu" />

</androidx.constraintlayout.widget.ConstraintLayout>